Index page created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="images/sydney.jpg" height="400px" />
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="./contact.html">Reach Me</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome</h1>
+        <p>"Life is Either a daring adventure or nothing at all"</p>
+        <p>2022 has come. May be not with a bang as a lot of us may have hoped,but the world goes on and as such I have decided to resume my travel next year. here are the list of places i visited.
+        </p>
+        <ul>
+            <li>Sydney</li>
+            <li>Melboune</li>
+            <li>Brisbane</li>
+            <li>Gold Coast</li>
+        </ul>
+
+        <table border="1px">
+            <tr>
+                <th colspan="4">Hotel Expenses</th>
+            </tr>
+            <tr>
+                <th scope="col">Destination</th>
+                <th scope="col">Hotel</th>
+                <th scope="col">Night</th>
+                <th scope="col">Cost</th>
+            </tr>
+            <tr>
+                <th scope="row">Sydney</th>
+                <td rowspan="2">Ibis Hotel</td>
+                <td>10</td>
+                <td>2230</td>
+            </tr>
+            <tr>
+                <th scope="row">Melboune</th>
+                <td>20</td>
+                <td>2680</td>
+            </tr>
+            <tr>
+                <th scope="row">Brisbane</th>
+                <td>Global Resort</td>
+                <td rowspan="2">22</td>
+                <td>3568</td>
+            </tr>
+            <tr>
+                <th scope="row">Gold Coast</th>
+                <td>Cheese Cake Resort</td>
+                <td>3768</td>
+            </tr>
+        </table>
+    </main>
+    <footer>
+        <hr>
+        <p>Copyright 2022. All rights reserved. </p>
+    </footer>
 </body>
 </html>
